--- a/public/css/app.css
+++ b/public/css/app.css
@@ -128,6 +128,24 @@ nav .nav-link:hover {
 	margin: 20px 0;
 }
 
+#services {
+	margin: 60px 0;
+}
+
+#services h2.text-center {
+	color: #333;
+	font-family: 'Lalezar', sans-serif;
+}
+
+#services .blue-hr {
+	border: 1px solid #87cefb;
+	width: 50%;
+}
+
+#services .col-lg-6 {
+	margin: 20px 0;
+}
+
 footer {
 	height: 150px;
 	padding: 2%;
