--- a/public/css/app.css
+++ b/public/css/app.css
@@ -146,6 +146,37 @@ nav .nav-link:hover {
 	margin: 20px 0;
 }
 
+#about {
+	margin: 60px 0;
+}
+
+#about h2.text-center {
+	font-family: 'Lalezar', sans-serif;
+	color: #333;
+}
+
+#about .blue-hr {
+	border: 1px solid #87cefb;
+	width: 50%;
+}
+
+
+#about .shadow-box {
+	padding: 2%;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+#about .about-item {
+	margin: 30px 0;
+}
+
+#about .col-lg-6 p.text-left {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 200;
+	font-size: 15px;
+	color: #807d7d;
+}
+
 footer {
 	height: 150px;
 	padding: 2%;
