customize services page and create single service page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -124,6 +124,16 @@ nav .nav-link:hover {
 	margin: 0 7px;
 }
 
+#works .col-lg-4 a.nav-link {
+	color: #444;
+	transition: all 0.6s;
+}
+
+#works .col-lg-4 a.nav-link:hover {
+	color: #807d7d;
+	transition: all 0.6s;
+}
+
 #works .pagination {
 	margin: 20px 0;
 }
@@ -146,6 +156,27 @@ nav .nav-link:hover {
 	margin: 20px 0;
 }
 
+#service {
+	margin: 60px 0;
+}
+
+#service h3.text-center {
+	font-family: 'Josefin sans', sans-serif;
+}
+
+#service p.text-left {
+	font-family: 'Raleway', sans-seif;
+}
+
+#service .blue-hr {
+	border: 1px solid #87cefb;
+	width: 50%;
+}
+
+#service .contact-form {
+	margin: 40px 0 0 0;
+} 
+
 #about {
 	margin: 60px 0;
 }
@@ -159,7 +190,6 @@ nav .nav-link:hover {
 	border: 1px solid #87cefb;
 	width: 50%;
 }
-
 
 #about .shadow-box {
 	padding: 2%;
