create basic dirs and files for working with login and register systems

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -207,6 +207,11 @@ nav .nav-link:hover {
 	color: #807d7d;
 }
 
+#auth {
+	padding: 2%;
+	min-height: 500px;
+}
+
 footer {
 	height: 150px;
 	padding: 2%;
